# carla-virtual-platoon

./: .gitignore  CMakeLists.txt  README.md  auto_run.sh  dependency.cmake  k-track_Layer0Node.FBX  package.xml
carla-sync-manager/: CMakeLists.txt  package.xml
carla-sync-manager/include/: manager.hpp  shared_carlalib.h
carla-sync-manager/node/: manager.cpp
carla-sync-manager/src/: main.cpp
carla-virtual-platoon/: CMakeLists.txt
carla-virtual-platoon/config/: config.yaml  sync_config.yaml
carla-virtual-platoon/include/: Camera.hpp  CarlaLocation.hpp  Lidar.hpp  Radar.hpp  TruckControl.hpp  TruckOBU.hpp  TruckStatus.hpp  shared_carlalib.h
carla-virtual-platoon/launch/: carla-virtual-platoon.launch.py
carla-virtual-platoon/map_package/: k-track.xodr
carla-virtual-platoon/nodes/: Camera.cpp  Lidar.cpp  Radar.cpp  TruckControl.cpp  TruckOBU.cpp  TruckStatus.cpp
carla-virtual-platoon/src/: main.cpp
carla_truck_bridge/: CMakeLists.txt  package.xml
carla_truck_bridge/include/: CarlaIMU.hpp  CarlaRGBCamera.hpp  CarlaRadar.hpp  CarlaVehicle.hpp
carla_truck_bridge/launch/: carla_truck_bridge.launch.py
carla_truck_bridge/nodes/: CarlaRGBCamera.cpp  CarlaRadar.cpp
carla_truck_bridge/src/: FV1.cpp  FV2.cpp  LV.cpp
carla_truck_bridge/src/controller/: controller.cpp  controller.h  controller.ui  ui_controller.h
config/: .config.yaml.swp  config.yaml  map.yml  params.yaml
include/: Camera.hpp  CarlaIMU.hpp  CarlaLidar.hpp  CarlaLocation.hpp  CarlaRGBCamera.hpp  CarlaRadar.hpp  CarlaVehicle.hpp  FrontCamera.hpp  FrontLidar.hpp  FrontRadar.hpp  Lidar.hpp  Radar.hpp  Spectator.hpp  TruckControl.hpp  TruckOBU.hpp  TruckStatus.hpp  shared_carlalib.h
install/: local_setup.sh  setup.sh
install/carla-virtual-platoon/share/carla-virtual-platoon/: package.bash  package.zsh
launch/: carla-virtual-platoon.launch.py  carla_truck_bridge.launch.py
log/: latest_build
nodes/: Camera.cpp  CarlaIMU.cpp  CarlaLidar.cpp  CarlaRGBCamera.cpp  CarlaRadar.cpp  CarlaVehicle.cpp  FrontCamera.cpp  FrontLidar.cpp  FrontRadar.cpp  Lidar.cpp  Radar.cpp  Spectator.cpp  TruckControl.cpp  TruckOBU.cpp  TruckStatus.cpp
ros2_msg/: CMakeLists.txt  README.md  package.xml
ros2_msg/msg/: Boundingbox.msg  Cmd2xav.msg  GNSS.msg  IMU.msg  Lane2xav.msg  Lrc2ocr.msg  Lrc2xav.msg  Obj2xav.msg  V2XCAM.msg  V2XCUSTOM.msg  Xav2cmd.msg  Xav2lane.msg  Xav2lrc.msg  Yoloflag.msg
src/: .main.cpp.swp  FV1.cpp  FV2.cpp  LV.cpp  SCT_log00.csv  SCT_log01.csv  SCT_log02.csv  main.cpp
